Edit and complete main objective
Add code to render a resizeable grid of pixels
that change color when one mouses over them.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Setting up...</h1>
-    <div class="container main">
+    <div class="main-container">
+        <div class="resize-area">
+            <button class="resize">Resize the grid!</button>
+        </div>
+        <div class="grid-container">
 
 
 
+        </div>
+        <div class="reset-area">
+            <button class="reset">Reset!</button>
+        </div>
     </div>
 </body>
 </html>
